Add summary text to sliding key input preview settings
Bug: 8089491
Change-Id: I15801281a95b01c67ef23a9c1558d6cdf457d375

--- a/java/res/xml/prefs.xml
+++ b/java/res/xml/prefs.xml
@@ -145,6 +145,7 @@
             <CheckBoxPreference
                 android:key="pref_sliding_key_input_preview"
                 android:title="@string/sliding_key_input_preview"
+                android:summary="@string/sliding_key_input_preview_summary"
                 android:persistent="true"
                 android:defaultValue="true" />
             <ListPreference
