[Rlog79c] Cleanup of feedback strings and text entry
Change-Id: I97457ea8033a011c37e5970eb91d1a3273b81e2a

--- a/java/res/layout/research_feedback_fragment_layout.xml
+++ b/java/res/layout/research_feedback_fragment_layout.xml
@@ -63,7 +63,7 @@
             android:minLines="2"
             android:scrollbars="vertical"
             android:hint="@string/research_feedback_hint"
-            android:inputType="textMultiLine">
+            android:inputType="textMultiLine|textCapSentences">
             <requestFocus />
         </EditText>
         <CheckBox
