--- a/java/res/values/research_strings.xml
+++ b/java/res/values/research_strings.xml
@@ -21,8 +21,20 @@
     <!-- Contents of note explaining what data is collected and how. -->
     <!-- TODO: remove translatable=false attribute once text is stable -->
     <string name="research_splash_content" translatable="false"></string>
+    <!-- Account type allowed for inclusion in user-invoked feedback logs [CHAR LIMIT=38] -->
     <string name="research_account_type" translatable="false"></string>
+    <!-- Account domain allowed for inclusion in user-invoked feedback logs [CHAR LIMIT=38] -->
     <string name="research_allowed_account_domain" translatable="false"></string>
+
+    <!-- Menu option that lets user send feedback for research purposes about the IME [CHAR LIMIT=38] -->
+    <!-- TODO: remove translatable=false attribute once text is stable -->
+    <string name="research_feedback_menu_option" translatable="false">Send feedback</string>
+    <!-- Title of dialog box that lets user send feedback for research purposes about the IME [CHAR LIMIT=38] -->
+    <!-- TODO: remove translatable=false attribute once text is stable -->
+    <string name="research_feedback_dialog_title" translatable="false">Send feedback</string>
+    <!-- Hint to user about the text entry field where they should enter research feedback [CHAR LIMIT=40] -->
+    <!-- TODO: remove translatable=false attribute once text is stable -->
+    <string name="research_feedback_hint" translatable="false">Enter your feedback here.</string>
     <!-- Message informing the user that the feedback string must not be empty [CHAR LIMIT=100] -->
     <!-- TODO: remove translatable=false attribute once text is stable -->
     <string name="research_feedback_empty_feedback_error_message" translatable="false">The feedback field must not be empty.</string>
