--- a/java/res/values/dictionary-pack.xml
+++ b/java/res/values/dictionary-pack.xml
@@ -18,6 +18,6 @@
 */
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="dictionary_pack_client_id">com.android.inputmethod.latin</string>
-    <string name="dictionary_pack_metadata_uri"></string>
+    <string name="dictionary_pack_client_id" translatable="false">com.android.inputmethod.latin</string>
+    <string name="dictionary_pack_metadata_uri" translatable="false"></string>
 </resources>
