Pass the client ID to the dictionary pack in settings
Bug: 6789534
Bug: 8256209
Change-Id: Ib63c18e7f18117ba888324febea13da47332b6c6

--- a/java/res/xml/prefs.xml
+++ b/java/res/xml/prefs.xml
@@ -60,7 +60,11 @@
            <intent
               android:action="android.intent.action.MAIN"
               android:targetPackage="@string/dictionary_pack_package_name"
-              android:targetClass="@string/dictionary_pack_settings_activity" />
+              android:targetClass="@string/dictionary_pack_settings_activity">
+             <extra
+                 android:name="clientId"
+                 android:value="@string/dictionary_pack_client_id" />
+           </intent>
         </PreferenceScreen>
         <ListPreference
             android:key="auto_correction_threshold"
