--- a/java/res/values/strings-appname.xml
+++ b/java/res/values/strings-appname.xml
@@ -20,14 +20,14 @@
 
 <resources>
     <!-- Title for Latin Keyboard  -->
-    <string name="english_ime_name">Android keyboard</string>
+    <string name="english_ime_name">Android Keyboard</string>
 
     <!-- Name of Android spell checker service -->
-    <string name="spell_checker_service_name">Android spell checker</string>
+    <string name="spell_checker_service_name">Android Spell Checker</string>
 
     <!-- Title for Latin keyboard settings activity / dialog -->
-    <string name="english_ime_settings">Android keyboard settings</string>
+    <string name="english_ime_settings">Android Keyboard Settings</string>
 
     <!-- Title for the spell checking service settings screen -->
-    <string name="android_spell_checker_settings">Spell checking settings</string>
+    <string name="android_spell_checker_settings">Android Spell Checker Settings</string>
 </resources>
