Move some values to a place where they are easier to override
Bug: 8418765
Change-Id: Iff0edd4ed8da9d0d1a6fb9545224b232ba374469

--- a/java/res/values/dictionary-pack.xml
+++ b/java/res/values/dictionary-pack.xml
@@ -20,4 +20,8 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="dictionary_pack_client_id" translatable="false">com.android.inputmethod.latin</string>
     <string name="dictionary_pack_metadata_uri" translatable="false"></string>
+    <string name="dictionary_pack_settings_activity">com.android.inputmethod.dictionarypack.DictionarySettingsActivity</string>
+    <string name="authority">com.android.inputmethod.dictionarypack.aosp</string>
+    <string name="default_metadata_uri"></string>
+    <string name="local_metadata_filename">metadata.json</string>
 </resources>
