Make setup wizard step number highlighted when activated
Bug: 8159728
Change-Id: I62ccbebaae0a0c4a93ad7c155fc3020a7f357f3c

--- a/java/res/layout/setup_wizard.xml
+++ b/java/res/layout/setup_wizard.xml
@@ -46,12 +46,15 @@
             android:paddingTop="16dp"
             android:orientation="horizontal">
             <TextView
+                android:id="@+id/setup_step1_bullet"
                 style="@style/setupStepBulletStyle"
                 android:text="@string/setup_step1_bullet" />
             <TextView
+                android:id="@+id/setup_step2_bullet"
                 style="@style/setupStepBulletStyle"
                 android:text="@string/setup_step2_bullet" />
             <TextView
+                android:id="@+id/setup_step3_bullet"
                 style="@style/setupStepBulletStyle"
                 android:text="@string/setup_step3_bullet" />
         </LinearLayout>
