--- a/java/res/values-v17/setup-styles.xml
+++ b/java/res/values-v17/setup-styles.xml
@@ -15,6 +15,11 @@
 -->
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-    <style name="setupTitleStyle" parent="setupTitleStyleCommon" />
-    <style name="setupStepActionLabelStyle" parent="setupStepActionLabelStyleCommon" />
+    <style name="setupTitleStyle" parent="setupTitleStyleCommon">
+        <item name="android:layout_alignParentStart">true</item>
+    </style>
+    <style name="setupStepActionLabelStyle" parent="setupStepActionLabelStyleCommon">
+        <item name="android:paddingStart">12dp</item>
+        <item name="android:paddingEnd">24dp</item>
+    </style>
 </resources>
