--- a/java/res/values-sw768dp-land/setup-dimens.xml
+++ b/java/res/values-sw768dp-land/setup-dimens.xml
@@ -16,5 +16,6 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <dimen name="setup_title_text_size">64sp</dimen>
+    <dimen name="setup_welcome_description_text_size">36sp</dimen>
     <dimen name="setup_horizontal_padding">192dp</dimen>
 </resources>
