Support landscape orientation for setup wizard
Bug: 8159728
Change-Id: Ic0f73a7ebfea6e5e98aa320eb1ebc2a677271665

--- a/java/res/values/setup-dimens.xml
+++ b/java/res/values/setup-dimens.xml
@@ -18,4 +18,6 @@
     <dimen name="setup_title_text_size">46sp</dimen>
     <dimen name="setup_welcome_description_text_size">26sp</dimen>
     <dimen name="setup_horizontal_padding">16dp</dimen>
+    <integer name="setup_title_weight_in_screen">40</integer>
+    <integer name="setup_body_weight_in_screen">60</integer>
 </resources>
